kubernetes-examples/hellov2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hellov2
  name: hellov2
  namespace: rvaldez
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hellov2
  type: NodePort
status:
  loadBalancer: {}
